# RsVideoCapture

./: Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml  video_capture.pyi
.github/workflows/: CI.yml
src/: binding.rs  capture.rs  core.rs  lib.rs  packet.rs  types.rs  writer.rs
src/decoder/: hardware.rs  mod.rs  software.rs
