[package]
name = "video_capture"
version = "0.4.0"
edition = "2021"
exclude = [".github/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "video_capture"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
rsmpeg = { version = "0.18.0", features = ["link_system_ffmpeg", "ffmpeg7"], default-features = false }
